added React Router and initial routing

--- a/src/components/Layout/HeaderBottom.module.css
+++ b/src/components/Layout/HeaderBottom.module.css
@@ -24,7 +24,8 @@ nav ul{
     list-style-type: none;
 }
 
-nav ul li {
+.navigationIcon{
+    color: #fff;
     height: 25px;
     width: 25px;
     font-size: 25px;
