--- a/src/components/Layout/HeaderTop.module.css
+++ b/src/components/Layout/HeaderTop.module.css
@@ -1,34 +1,39 @@
-.headerBottom {
+.headerTop {
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 8.5%;
     background-color: #00113a;
-    color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     z-index: 10;
 }
 
-.navBottom {
-    width: 100%;
+.lessLogoTop{
+    height: 30px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-55%);
+    margin-left: 30px;
 }
 
-.ulBottom {
-    width: 100%;
+.navTop{
+    width: 25%;
+    margin-right: 20px;
+}
+
+.ulTop{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style-type: none;
+    justify-content: space-around;
 }
 
 li{
     list-style: none;
 }
 
-.navigationIconBottom {
+.navigationIcon{
     color: #fff;
     height: 27px;
     width: 27px;
