--- a/src/components/UI/AvatarContainer.module.css
+++ b/src/components/UI/AvatarContainer.module.css
@@ -1,7 +1,6 @@
 .avatarContainer {
     height: 50px;
     width: 100%;
-    background: pink;
     padding: 0.5em 0.4em;
     display: flex;
     align-items: center;
@@ -11,11 +10,7 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    background: white;
+    background: palegreen;
     margin-right: 5px;
 }
 
-.username {
-    font-weight: 600;
-    font-size: 15px;
-}
