--- a/src/components/UI/PublicFeed.module.css
+++ b/src/components/UI/PublicFeed.module.css
@@ -1,23 +1,17 @@
 .feedContainer {
-    height: 100%;
     width: 100%;
-    overflow-x: hidden;
-}
-
-.imageContainer {
-    height: 380px;
-    width: 100%;
-    background: brown;
 }
 
 .commentContainer {
     width: 100%;
-    padding: 0.4em 0.5em;
+    padding: 0.5em;
+    border-bottom: 1px solid rgb(196, 196, 196);
 }
 
 .commentContent {
     display: flex;
-    background: red;
+    max-height: 85px;
+        text-overflow: ellipsis;
 }
 
 .userName {
@@ -27,6 +21,12 @@
 
 .fuckingP{
     font-size: 14px;
-    width: 95vw;
+    width: 344px;
+    height: 85px;
     word-wrap: break-word;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
