--- a/src/components/UI/PersonalSection/PersonalFeedPhotos.module.css
+++ b/src/components/UI/PersonalSection/PersonalFeedPhotos.module.css
@@ -1,6 +1,25 @@
+.imagesGrid {
+    width: 95%;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-rows: auto;
+    gap: 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+
 .imageContainer {
-    width: 100%;
+    height: 160px;
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    overflow: hidden;
+    margin: 0;
+}
+
+.imageContent {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    margin: 0;
 }
