--- a/src/components/UI/Buttons/EditProfileButton.module.css
+++ b/src/components/UI/Buttons/EditProfileButton.module.css
@@ -1,8 +1,8 @@
-.editProfileButton{
+.editProfileButton {
     margin-top: 10px;
     background: none;
     border: none;
-    background: #00113a;
+    background: #ffab38;
     color: white;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
@@ -11,6 +11,65 @@
     font-size: 12px;
 }
 
-.editProfileButton:hover{
+.editProfileButton:hover {
     background: #8b215f;
+}
+
+.userInfoContainer {
+    position: absolute;
+    padding: 1.5em 1em;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.avatarContainer {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-bottom: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 2.95px 2.95px 3.6px;
+}
+
+.avatarImage {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.usernameStyle {
+    font-size: 24px;
+}
+
+.inputStyle {
+    padding: 0.5em;
+}
+
+.inputStyleBottom {
+    padding: 0.5em;
+    margin-bottom: 2em;
+}
+
+.formStyle {
+    margin: 1em 0 0.5em 0;
+}
+
+.submitChangeButton {
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 6px;
+    width: 100%;
+    background: #ffab38;
+    padding: 0.7em 0;
+    border: none;
 }
