--- a/src/components/Pages/Messages.module.css
+++ b/src/components/Pages/Messages.module.css
@@ -1,4 +1,54 @@
 .messagesSection {
-    height: 100vh;
-    padding: 54px 0;
+    padding:54px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.messageContainer {
+    margin: 0.6em 0;
+    width: 90%;
+    border-radius: 6px;
+    padding: 0.5em;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    display: flex;
+
+}
+
+.msgAvatar {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-shrink: 0;    
+}
+
+.avatarPlaceholderStyle {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.msgInfo {
+    margin-left: 10px;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.msgAvatarname {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.msg {
+    height: 25px;
+    font-size: 13px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
