--- a/src/components/UI/Buttons/EditProfileButton.module.css
+++ b/src/components/UI/Buttons/EditProfileButton.module.css
@@ -1,5 +1,4 @@
 .editProfileButton {
-    margin-top: 10px;
     background: none;
     border: none;
     background: #ffab38;
@@ -46,6 +45,18 @@
     object-fit: cover;
 }
 
+.bioAreaStyle{
+    width: 100%;
+    font-size: 12px;
+    resize: none;
+    border-radius: 6px;
+    border: none;
+    padding: 0.5em;
+    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 15px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
 .usernameStyle {
     font-size: 24px;
 }
@@ -72,4 +83,13 @@
     background: #ffab38;
     padding: 0.7em 0;
     border: none;
+}
+
+.logoutButton{
+    background: none;
+    border: none;
+    padding: 0.5em;
+    color: rgb(182, 4, 4);
+    font-size: 14px;
+    font-weight: 600;
 }
