--- a/src/components/Layout/HeaderBottom.module.css
+++ b/src/components/Layout/HeaderBottom.module.css
@@ -14,6 +14,8 @@
 
 .navBottom {
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .ulBottom {
@@ -36,4 +38,69 @@ li{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+/**### MEDIA QUERIES ####**/
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .navigationIconBottom {
+        height: 30px;
+        width: 30px;
+        font-size: 28px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .navBottom {
+        width: 90%;
+    }
+    .navigationIconBottom {
+        height: 40px;
+        width: 40px;
+        font-size: 35px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .navBottom {
+        width: 90%;
+    }
+
+    .navigationIconBottom {
+        height: 55px;
+        width: 55px;
+        font-size: 45px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .headerBottom {
+        height: 60px;
+    }
+
+    .navBottom {
+        width: 800px;
+    }
+    
+    .navigationIconBottom{
+        height: px;
+        width: 30px;
+        font-size: 45px;
+    }
+
+    .lessLogoTop{
+        height: 30px;
+        margin-left: 185px;
+        top: 50%;
+        transform: translateY(-25%);
+    }
+    
+    .navTop{
+        width: 10%;
+        margin-right: 180px;
+    }
 }
