--- a/src/components/Layout/HeaderTop.module.css
+++ b/src/components/Layout/HeaderTop.module.css
@@ -16,12 +16,12 @@
     position: relative;
     top: 50%;
     transform: translateY(-55%);
-    margin-left: 30px;
+    margin-left: 12px;
 }
 
 .navTop{
     width: 25%;
-    margin-right: 20px;
+    margin-right: 8px;
 }
 
 .ulTop{
@@ -41,4 +41,93 @@ li{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+
+/**### MEDIA QUERIES ####**/
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .lessLogoTop{
+        height: 35px;
+        margin-left: 78px;
+    }
+    
+    .navTop{
+        margin-right: 62px;
+    }
+        
+    .navigationIcon{
+        height: 30px;
+        width: 30px;
+        font-size: 28px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .navigationIcon{
+        height: 40px;
+        width: 40px;
+        font-size: 35px;
+    }
+
+    .lessLogoTop{
+        height: 40px;
+        margin-left: 135px;
+        top: 50%;
+        transform: translateY(-75%);
+    }
+    
+    .navTop{
+        margin-right: 115px;
+    }
+        
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .navigationIcon{
+        height: 55px;
+        width: 55px;
+        font-size: 45px;
+    }
+
+    .lessLogoTop{
+        height: 65px;
+        margin-left: 185px;
+        top: 50%;
+        transform: translateY(-80%);
+    }
+    
+    .navTop{
+        margin-right: 160px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .headerTop {
+        height: 60px;
+    }
+    
+    .navigationIcon{
+        height: 30px;
+        width: 30px;
+        font-size: 45px;
+    }
+
+    .lessLogoTop{
+        height: 40px;
+        margin-left: 185px;
+        position: relative;
+        top: 16px;
+        transform: translateY(0);
+        margin-left: 180px;
+    }
+    
+    .navTop{
+        width: 10%;
+        margin-right: 180px;
+    }
 }
