--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -1,4 +1,4 @@
-._loginRegister{
+._loginRegister {
     min-width: 360px;
     height: 100vh;
     display: flex;
@@ -8,13 +8,13 @@
     position: relative;
 }
 
-form{
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-img{
+img {
     height: 120px;
     width: auto;
     margin-bottom: 20px;
@@ -36,12 +36,12 @@ input {
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
-input:focus{
+input:focus {
     outline: none;
     border: #b3dcd4 2px solid;
 }
 
-.login-button{
+.login-button {
     margin-top: 10px;
     min-width: 210px;
     background: #00113a;
@@ -63,15 +63,67 @@ input:focus{
     border-top: #00113a solid 1px;
 }
 
-._signup{
+._signup {
     font-size: 14px;
 }
 
-.register-button{
+.register-button {
     font-size: 14px;
     margin-left: 6px;
     border: none;
     color: #00113a;
     font-weight: 600;
     background: none;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1024px) {
+    .landingwrapper {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url('../assets/landingimage.webp');
+        background-repeat: none;
+        background-size: cover;
+    }
+
+    ._loginRegister {
+        background: #fff;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        width: 400px;
+        height: 700px;
+        border-radius: 20px;
+    }
+
+    img {
+        height: 150px;
+        width: auto;
+        margin-bottom: 30px;
+    }
+
+    input {
+        width: 250px;
+        margin-bottom: 2em;
+    }
+}
+
+/* screens 1281px and higher */
+@media only screen and (min-width:1281px){
+
+    ._loginRegister {
+        background: #fff;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        width: 600px;
+        height: 800px;
+    }
+
+    img {
+        height: 150px;
+        width: auto;
+        margin-bottom: 30px;
+    }
 }
