--- a/src/components/Pages/Feed.module.css
+++ b/src/components/Pages/Feed.module.css
@@ -1,3 +1,50 @@
 .feedSection {
     padding: 54px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* pixel 2*/
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .feedSection {
+        padding: 62px 0;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .feedSection {
+        padding: 69px 0;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .feedSection {
+        padding: 61px 0;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .feedSection {
+        padding: 87px 0;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .feedSection {
+        padding: 116px 0;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .feedSection {
+        padding: 70px 0;
+    }
 }
