--- a/src/components/Pages/Messages.module.css
+++ b/src/components/Pages/Messages.module.css
@@ -12,7 +12,6 @@
     padding: 0.5em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: flex;
-
 }
 
 .msgAvatar {
@@ -51,4 +50,146 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* iphone 6/7/8 */
+@media only screen and (min-height: 667px) {
+    .messagesSection {
+        margin: 10px 0;
+    }
+
+}
+
+/* pixel 2*/
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .messagesSection {
+        margin: 10px 0;
+    }
+}
+
+/* pixel 2 xl */
+@media only screen and (min-width: 411px) and (min-height: 823px) {
+    .messagesSection {
+        padding:70px 0;
+    }
+}
+
+/* iphone 6/7/8 plus */
+@media only screen and (max-width: 414px) and (max-height: 736px) {
+    .messagesSection {
+        padding:70px 0;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .messagesSection {
+        padding:70px 0;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .messagesSection {
+        padding:70px 0;
+    }
+
+    .messageContainer {
+        margin: 0.7em 0;
+        width: 375px;
+        padding: 1em;
+    }
+    
+    .msgAvatar {
+        height: 50px;
+        width: 50px;
+    }
+
+    .msgInfo {
+        margin-left: 15px;
+    }
+        
+    .msg {
+        font-size: 12px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .messagesSection {
+        padding:90px 0;
+    }
+
+    .messageContainer {
+        margin: 0.7em 0;
+        width: 485px;
+        padding: 1em;
+    }
+    
+    .msgAvatar {
+        height: 50px;
+        width: 50px;
+    }
+
+    .msgInfo {
+        margin-left: 15px;
+    }
+        
+    .msg {
+        font-size: 14px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .messagesSection {
+        padding:120px 0;
+    }
+
+    .messageContainer {
+        margin: 0.7em 0;
+        width: 660px;
+        padding: 1em;
+    }
+    
+    .msgAvatar {
+        height: 60px;
+        width: 60px;
+    }
+
+    .msgInfo {
+        margin-left: 15px;
+    }
+        
+    .msg {
+        font-size: 15px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .messagesSection {
+        padding:70px 0;
+    }
+
+    .messageContainer {
+        margin: 0.7em 0;
+        width: 450px;
+        padding: 1em;
+    }
+    
+    .msgAvatar {
+        height: 60px;
+        width: 60px;
+    }
+
+    .msgInfo {
+        margin-left: 15px;
+    }
+        
+    .msg {
+        font-size: 13px;
+    }
 }
