--- a/src/components/Pages/NewPost.module.css
+++ b/src/components/Pages/NewPost.module.css
@@ -1,17 +1,18 @@
 .newPostSection {
     height: 100vh;
     padding: 54px 0;
-    overflow-x: hidden;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .imagePreviewContainer {
-    margin-top: 15px;
     height: 380px;
     max-width: 100%;
     display: flex;
     justify-content: center;
     overflow-x: hidden;
-
 }
 
 .shareText {
@@ -44,9 +45,15 @@
     position: relative;
 }
 
-.imagePreviewResize {
+.imagePreviewContainerStyle {
     width: 100%;
     height: 380px;
+}
+
+.imagePreviewResize {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .deleteButton {
@@ -127,4 +134,356 @@
     padding: 0.5em 1.5em;
     border-radius: 10px;
     background: #00113a;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* iphone 6/7/8 */
+@media only screen and (min-height: 667px) {
+    .newPostSection {
+        padding: 57px 0;
+    }
+    .shareText{
+        margin-top: 25px;
+    }
+
+    .newPostModal{
+        width: 330px;
+    }
+
+    .uploadToDBButton{
+        font-size: 18px;
+        padding: 0.5em 2em;
+    }
+}
+
+/* pixel 2*/
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .newPostSection {
+        padding: 62px 0;
+    }
+
+    .imagePreviewContainer {
+        height: 430px;
+    }
+
+    .imagePreviewContainerStyle {
+        height: 430px;
+    }
+
+    .uploadButton{
+        font-size: 15px;
+        padding: 0.5em 1.25em;
+        bottom: 15px;
+        right: 15px;
+    }
+
+    .deleteButton {
+        width: 30px;
+        height: 30px;
+        right: 15px;
+        top: 15px;
+    }
+
+    .deleteButtonIcon {
+        font-size: 25px;
+    }
+}
+
+/* iphone 6/7/8 plus */
+@media only screen and (max-width: 414px) and (max-height: 736px) {
+    .newPostSection {
+        padding: 63px 0;
+    }
+
+    .imagePreviewContainer {
+        height: 440px;
+    }
+
+    .imagePreviewContainerStyle {
+        height: 440px;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .newPostSection {
+        padding: 69px 0;
+    }
+
+    .imagePreviewContainer {
+        height: 500px;
+    }
+
+    .imagePreviewContainerStyle {
+        height: 500px;
+    }
+
+    .uploadButton{
+        font-size: 15px;
+        padding: 0.5em 1.25em;
+        bottom: 15px;
+        right: 15px;
+    }
+
+    .deleteButton {
+        width: 30px;
+        height: 30px;
+        right: 15px;
+        top: 15px;
+    }
+
+    .deleteButtonIcon {
+        font-size: 25px;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .newPostSection {
+        padding: 61px 0;;
+    }
+
+    .imagePreviewContainer {
+        height: 420px;
+        width: 375px;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .imagePreviewContainerStyle {
+        height: 420px;
+    }
+
+    .uploadButton{
+        font-size: 15px;
+        padding: 0.5em 1.25em;
+        bottom: 15px;
+        right: 15px;
+    }
+
+    .deleteButton {
+        width: 30px;
+        height: 30px;
+        right: 15px;
+        top: 15px;
+    }
+
+    .deleteButtonIcon {
+        font-size: 25px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .newPostSection {
+        padding: 87px 0;;
+    }
+
+    .imagePreviewContainer {
+        height: 600px;
+        width: 63%;
+        border-radius: 0 0 10px 10px;
+    }
+
+
+    .imagePreviewContainerStyle {
+        height: 600px;
+    }
+
+    .uploadButton{
+        font-size: 20px;
+        padding: 0.5em 1.25em;
+        bottom: 25px;
+        right: 20px;
+        font-weight: 600;
+    }
+
+    .deleteButton {
+        width: 35px;
+        height: 35px;
+        right: 20px;
+        top: 25px;
+    }
+
+    .deleteButtonIcon {
+        font-size: 30px;
+    }
+
+    .shareText {
+        margin-top: 40px;
+    }
+
+    .headline{
+        font-size: 35px;
+    }
+
+    .creativeMindText {
+        font-size: 20px;
+    }
+    
+    .selectImageButton{
+        margin-top: 15px;
+        padding: 0.5em 1.5em;
+        font-size: 20px;
+    }
+
+    .newPostModal{
+        padding: 2em 1em;
+        width: 450px;
+    }
+        
+    .textareaStyle {
+        font-size: 18px;
+    }
+    
+    .uploadToDBButton {
+        margin-top: 25px;
+        font-size: 22px;
+        padding: 0.5em 2em;
+        font-weight: 600;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .newPostSection {
+        padding: 116px 0;;
+    }
+
+    .imagePreviewContainer {
+        height: 800px;
+        width: 645px;
+        border-radius: 0 0 10px 10px;
+    }
+
+
+    .imagePreviewContainerStyle {
+        height: 800px;
+    }
+
+    .uploadButton{
+        font-size: 28px;
+        bottom: 30px;
+        right: 30px;
+    }
+
+    .deleteButton {
+        width: 60px;
+        height: 60px;
+        right: 30px;
+        top: 30px;
+    }
+
+    .deleteButtonIcon {
+        font-size: 45px;
+    }
+
+    .shareText {
+        width: 645px;
+        margin-top: 40px;
+    }
+
+    .headline{
+        font-size: 50px;
+    }
+
+    .creativeMindText {
+        font-size: 30px;
+    }
+    
+    .selectImageButton{
+        margin-top: 20px;
+        font-size: 30px;
+    }
+
+    .newPostModal{
+        padding: 2em 1em;
+        width: 645px;
+    }
+        
+    .textareaStyle {
+        font-size: 25px;
+    }
+    
+    .uploadToDBButton {
+        margin-top: 25px;
+        font-size: 30px;
+        padding: 0.5em 2em;
+        font-weight: 600;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .newPostSection {
+        margin: 60px;
+        padding: 0;
+    }
+
+    .imagePreviewContainer {
+        height: 400px;
+        width: 450px;
+    }
+
+
+    .imagePreviewContainerStyle {
+        height: 400px;
+    }
+
+    .uploadButton{
+        font-size: 15px;
+        bottom: 15px;
+        right: 15px;
+    }
+
+    .deleteButton {
+        width: 30px;
+        height: 30px;
+        right: 15px;
+        top: 15px;
+    }
+
+    .deleteButtonIcon {
+        font-size: 20px;
+    }
+
+    .shareText {
+        width: 450px;
+        margin-top: 20px;
+    }
+
+    .headline{
+        font-size: 35px;
+    }
+
+    .creativeMindText {
+        font-size: 20px;
+    }
+    
+    .selectImageButton{
+        margin-top: 15px;
+        font-size: 20px;
+    }
+
+    .smallPreview {
+        max-width: 90%;
+        height: 400px;
+        object-fit: cover;
+    }
+
+    .newPostModal{
+        padding: 2em 1em;
+        width: 450px;
+    }
+        
+    .textareaStyle {
+        font-size: 14px;
+    }
+    
+    .uploadToDBButton {
+        margin-top: 25px;
+        font-size: 20px;
+        padding: 0.5em 2em;
+        font-weight: 600;
+    }
 }
