--- a/src/components/Pages/PersonalFeed.module.css
+++ b/src/components/Pages/PersonalFeed.module.css
@@ -1,3 +1,10 @@
+.position {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .personalSection {
     display: flex;
     flex-direction: column;
@@ -8,6 +15,7 @@
 .userinfo {
     display: flex;
     height: 80px;
+    width: 100%;
     align-items: center;
     margin-bottom: 5px;
 }
@@ -20,3 +28,107 @@
     margin-bottom: 20px;
 }
 
+/**### MEDIA QUERIES ####**/
+
+/* pixel 2 */
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .personalSection {
+        padding: 54px 10px;
+        width: 405px;
+    }
+}
+
+/* pixel 2xl */
+@media only screen and (min-width: 411px) and (min-height: 823px) {
+    .personalSection {
+        margin-top: 16px;
+    }
+}
+
+/* iphone 6/7/8 plus */
+@media only screen and (max-width: 414px) and (max-height: 736px) {
+    .personalSection {
+        margin-top: 9px;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .personalSection {
+        margin-top: 15px;
+    }
+    .profileLine {
+        margin-top: 25px;
+        margin-bottom: 25px;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .personalSection {
+        margin-top: 15px;
+        width: 415px;
+    }
+
+    .profileLine {
+        margin-top: 25px;
+        margin-bottom: 25px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .personalSection {
+        margin-top: 33px;
+        width: 525px;
+    }
+
+    .userinfo {
+        height: 100px;
+    }
+
+    .profileLine {
+        margin-top: 25px;
+        margin-bottom: 30px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .personalSection {
+        margin-top: 62px;
+        width: 705px;
+    }
+
+    .userinfo {
+        height: 120px;
+        margin-bottom: 25px;
+    }
+
+    .profileLine {
+        margin-top: 25px;
+        margin-bottom: 30px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .personalSection {
+        margin-top: 30px;
+        width: 450px;
+    }
+
+    .userinfo {
+        height: 80px;
+        width: 450px;
+        margin-bottom: 15px;
+    }
+    
+    .profileLine {
+        margin-top: 20px;
+        height: 1px;
+        width: 95%;
+        background: rgb(196, 196, 196);
+        margin-bottom: 20px;
+    }
+}
