--- a/src/components/UI/AvatarContainer.module.css
+++ b/src/components/UI/AvatarContainer.module.css
@@ -1,7 +1,7 @@
 .avatarContainer {
     height: 50px;
     width: 100%;
-    padding: 0.5em 0.4em;
+    padding: 0.5em 12px;
     display: flex;
     align-items: center;
 }
@@ -9,7 +9,57 @@
 .avatarImage {
     width: 35px;
     height: 35px;
+    background: blue;
     border-radius: 50%;
     margin-right: 5px;
 }
 
+/**### MEDIA QUERIES ####**/
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .avatarContainer {
+        padding: 0.5em 0;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .avatarContainer {
+        height: 80px;
+        padding: 1em 0;
+    }
+    
+    .avatarImage {
+        width: 50px;
+        height: 50px;;
+        margin-right:10px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .avatarContainer {
+        height: 80px;
+        padding: 1em 0;
+    }
+    
+    .avatarImage {
+        width: 50px;
+        height: 50px;;
+        margin-right:10px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .avatarContainer {
+        height: 70px;
+    }
+
+    .avatarImage {
+        width: 40px;
+        height: 40px;;
+        margin-right:10px;
+    }
+}
