--- a/src/components/UI/AvatarInfoContainer.module.css
+++ b/src/components/UI/AvatarInfoContainer.module.css
@@ -3,4 +3,63 @@
     width: 270px;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* pixel 2*/
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .avatarText {
+        font-size: 14px;
+        width: 300px;
+    }
+}
+
+/* pixel 2xl */
+@media only screen and (min-width: 411px) and (min-height: 823px) {
+    .avatarText {
+        font-size: 14px;
+        width: 300px;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .avatarText {
+        font-size: 14px;
+        width: 270px;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .avatarText {
+        font-size: 14px;
+        width: 315px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .avatarText {
+        font-size: 16px;
+        width: 420px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .avatarText {
+        font-size: 18px;
+        width: 580px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .avatarText {
+        font-size: 14px;
+        width: 330px;
+    }
 }
