--- a/src/components/UI/AvatarPersonalPicture.module.css
+++ b/src/components/UI/AvatarPersonalPicture.module.css
@@ -11,4 +11,34 @@
     width: 100%;
     height: auto;
     object-fit: cover;
+    flex-shrink: 0;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .avatarPictureContainer {
+        height: 60px;
+        width: 60px;
+        margin-right: 15px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .avatarPictureContainer {
+        height: 70px;
+        width: 70px;
+        margin-right: 15px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .avatarPictureContainer {
+        height: 80px;
+        width: 80px;
+        margin-right: 20px;
+    }
 }
