--- a/src/components/UI/Buttons/EditProfileButton.module.css
+++ b/src/components/UI/Buttons/EditProfileButton.module.css
@@ -10,10 +10,6 @@
     font-size: 12px;
 }
 
-.editProfileButton:hover {
-    background: #8b215f;
-}
-
 .userInfoContainer {
     position: absolute;
     padding: 1.5em 1em;
@@ -41,18 +37,20 @@
 
 .avatarImage {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 }
 
-.bioAreaStyle{
+.bioAreaStyle {
     width: 100%;
     font-size: 12px;
     resize: none;
     border-radius: 6px;
     border: none;
     padding: 0.5em;
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
     margin-bottom: 15px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
@@ -85,11 +83,173 @@
     border: none;
 }
 
-.logoutButton{
+.logoutButton {
     background: none;
     border: none;
     padding: 0.5em;
     color: rgb(182, 4, 4);
     font-size: 14px;
     font-weight: 600;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* pixel 2*/
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .editProfileButton {
+        font-size: 14px;
+    }
+}
+
+/* pixel 2xl */
+@media only screen and (min-width: 411px) and (min-height: 823px) {
+    .editProfileButton {
+        font-size: 14px;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .editProfileButton {
+        font-size: 14px;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .editProfileButton {
+        font-size: 14px;
+    }
+
+    .userInfoContainer {
+        width: 380px;
+    }
+
+    .bioAreaStyle {
+        width: 100%;
+        font-size: 12px;
+        padding: 0.5em;
+        margin-bottom: 15px;
+    }
+
+    .formStyle {
+        width: 280px;
+    }
+
+    .inputStyle {
+        padding: 0.5em;
+        width: 280px;
+    }
+
+    .inputStyleBottom {
+        width: 280px;
+        padding: 0.5em;
+        margin-bottom: 2em;
+    }
+
+    .submitChangeButton {
+        font-size: 15px;
+        width: 80%;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .editProfileButton {
+        font-size: 16px;
+    }
+
+    .userInfoContainer {
+        padding: 2em 1em;
+        width: 450px;
+    }
+
+    .avatarContainer {
+        height: 120px;
+        width: 120px;
+    }
+
+    .bioAreaStyle {
+        padding: 0.6em;
+        font-size: 14px;
+    }
+
+    .usernameStyle {
+        font-size: 24px;
+    }
+
+    .formStyle {
+        width: 300px;
+    }
+
+    .inputStyle {
+        width: 300px;
+        padding: 0.6em;
+    }
+
+    .inputStyleBottom {
+        padding: 0.6em;
+        width: 300px;
+        margin-bottom: 2em;
+    }
+
+    .submitChangeButton {
+        font-size: 16px;
+        width: 260px;
+    }
+
+    .logoutButton {
+        font-size: 16px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .editProfileButton {
+        font-size: 18px;
+    }
+
+    .userInfoContainer {
+        padding: 2em 1em;
+        width: 450px;
+    }
+
+    .avatarContainer {
+        height: 140px;
+        width: 140px;
+    }
+
+    .bioAreaStyle {
+        padding: 0.6em;
+        font-size: 14px;
+    }
+
+    .usernameStyle {
+        font-size: 26px;
+    }
+
+    .formStyle {
+        width: 300px;
+    }
+
+    .inputStyle {
+        font-size: 15px;
+        width: 300px;
+    }
+
+    .inputStyleBottom {
+        padding: 0.6em;
+        width: 300px;
+        font-size: 15px;
+        margin-bottom: 2em;
+    }
+
+    .submitChangeButton {
+        font-size: 16px;
+        width: 260px;
+    }
+
+    .logoutButton {
+        font-size: 16px;
+    }
 }
