--- a/src/components/UI/ImageContainer.module.css
+++ b/src/components/UI/ImageContainer.module.css
@@ -10,3 +10,25 @@
     object-fit: cover;
 }
 
+/**### MEDIA QUERIES ####**/
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .imageContainer {
+        height: 450px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .imageContainer {
+        height: 560px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .imageContainer {
+        height: 700px;
+    }
+}
