--- a/src/components/UI/LikeAndDesc.module.css
+++ b/src/components/UI/LikeAndDesc.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 0.4em 0.5em;
+    padding: 0.4em 12px;
     border-bottom: 1px solid rgb(196, 196, 196);
 }
 
@@ -22,4 +22,66 @@
     height: 100%;
     overflow-x: hidden;
     text-overflow: ellipsis;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .likeContainer {
+        padding: 0.4em 0;
+    }
+    
+}
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .likeContainer {
+        padding: 1em 0;
+    }
+    
+    .buttonPlacement {
+        margin-right: 8px;
+    }
+    
+    .likeCommentIcon {
+        font-size: 32px;
+    }
+    
+    .postDesc {
+        font-size: 16px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .likeContainer {
+        padding: 1em 0;
+    }
+    
+    .buttonPlacement {
+        margin-right: 8px;
+    }
+    
+    .likeCommentIcon {
+        font-size: 40px;
+    }
+    
+    .postDesc {
+        font-size: 18px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .likeCommentIcon {
+        font-size: 25px;
+    }
+
+    .buttonPlacement {
+        margin-right: 4px;
+    }
+    
+    .postDesc {
+        font-size: 14px;
+    }
 }
