--- a/src/components/UI/LoggedInUser.module.css
+++ b/src/components/UI/LoggedInUser.module.css
@@ -1,3 +1,19 @@
 .username{
-    font-size: 20px;
+    font-size: 16px;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .username{
+        font-size: 18px;
+    }    
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .username{
+        font-size: 20px;
+    }    
 }
