--- a/src/components/UI/PersonalSection/PersonalFeedPhotos.module.css
+++ b/src/components/UI/PersonalSection/PersonalFeedPhotos.module.css
@@ -8,7 +8,6 @@
     margin-bottom: 20px;
 }
 
-
 .imageContainer {
     height: 160px;
     display: flex;
@@ -23,4 +22,77 @@
     height: auto;
     object-fit: cover;
     margin: 0;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* pixel 2 */
+@media only screen and (min-width: 411px) and (min-height: 731px) {
+    .imagesGrid {
+        margin-bottom: 30px;
+    }
+}
+
+/* pixel 2xl */
+@media only screen and (min-width: 411px) and (min-height: 823px) {
+    .imagesGrid {
+        margin-bottom: 40px;
+    }
+}
+
+/* iphone 6/7/8 plus */
+@media only screen and (max-width: 414px) and (max-height: 736px) {
+    .imagesGrid {
+        margin-bottom: 30px;
+    }
+}
+
+/* ipone x */
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+    .imagesGrid {
+        margin-bottom: 40px;
+    }
+}
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .imagesGrid {
+        margin-bottom: 35px;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .imagesGrid {
+        gap: 15px;
+        margin-bottom: 80px;
+    }
+
+    .imageContainer {
+        height: 230px;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .imagesGrid {
+        gap: 20px;
+        margin-bottom: 100px;
+    }
+
+    .imageContainer {
+        height: 300px;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .imagesGrid {
+        gap: 20px;
+        margin-bottom: 30px;
+    }
+
+    .imageContainer {
+        height: 220px;
+    }
 }
