--- a/src/components/UI/PublicFeed.module.css
+++ b/src/components/UI/PublicFeed.module.css
@@ -4,14 +4,14 @@
 
 .commentContainer {
     width: 100%;
-    padding: 0.5em;
+    padding: 0.5em 12px 0.5em 12px;
     border-bottom: 1px solid rgb(196, 196, 196);
 }
 
 .commentContent {
     display: flex;
     max-height: 85px;
-        text-overflow: ellipsis;
+    text-overflow: ellipsis;
 }
 
 .userName {
@@ -19,7 +19,7 @@
     margin-right: 8px;
 }
 
-.fuckingP{
+.fuckingP {
     font-size: 14px;
     width: 344px;
     height: 85px;
@@ -29,4 +29,94 @@
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
+}
+
+/**### MEDIA QUERIES ####**/
+
+/* surface duo */
+@media only screen and (min-width: 540px) and (max-height: 720px) {
+    .feedContainer {
+        width: 378px;
+    }
+
+    .commentContainer {
+        padding: 0.5em 0;
+    }
+}
+
+/* ipad */
+@media only screen and (min-width: 738px) and (max-height: 1024px) {
+    .feedContainer {
+        width: 485px;
+    }
+
+    .commentContainer {
+        padding: 0.5em 0 0.5em 0;
+    }
+
+    .commentContent {
+        max-height: 85px;
+        text-overflow: ellipsis;
+    }
+
+    .userName {
+        font-size: 16px;
+    }
+
+    .fuckingP {
+        font-size: 16px;
+        width: 100%;
+        height: 100%;
+        -webkit-line-clamp: 3;
+    }
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+    .feedContainer {
+        width: 635px;
+    }
+
+    .commentContainer {
+        padding: 0.75em 0 0.75em 0;
+    }
+
+    .commentContent {
+        max-height: 85px;
+        text-overflow: ellipsis;
+    }
+
+    .userName {
+        font-size: 18px;
+    }
+
+    .fuckingP {
+        font-size: 18px;
+        width: 100%;
+        height: 100%;
+        -webkit-line-clamp: 3;
+    }
+}
+
+/* screens 1024px and higher */
+@media only screen and (min-width: 1025px) {
+    .feedContainer {
+        width: 450px;
+    }
+
+    .commentContent {
+        max-height: 85px;
+        text-overflow: ellipsis;
+    }
+
+    .userName {
+        font-size: 16px;
+    }
+
+    .fuckingP {
+        font-size: 14px;
+        width: 100%;
+        height: 100%;
+        -webkit-line-clamp: 3;
+    }
 }
