--- a/src/components/Layout/HeaderBottom.module.css
+++ b/src/components/Layout/HeaderBottom.module.css
@@ -12,6 +12,7 @@
     z-index: 10;
 }
 
+
 .navBottom {
     width: 100%;
     display: flex;
@@ -87,7 +88,7 @@ li{
     }
     
     .navigationIconBottom{
-        height: px;
+        height: 30px;
         width: 30px;
         font-size: 45px;
     }
