--- a/src/components/Layout/HeaderTop.module.css
+++ b/src/components/Layout/HeaderTop.module.css
@@ -11,7 +11,11 @@
     z-index: 10;
 }
 
-.lessLogoTop{
+.allOnTop {
+    display: none;
+}
+
+.lessLogoTop {
     height: 30px;
     position: relative;
     top: 50%;
@@ -19,21 +23,21 @@
     margin-left: 12px;
 }
 
-.navTop{
+.navTop {
     width: 25%;
     margin-right: 8px;
 }
 
-.ulTop{
+.ulTop {
     display: flex;
     justify-content: space-around;
 }
 
-li{
+li {
     list-style: none;
 }
 
-.navigationIcon{
+.navigationIcon {
     color: #fff;
     height: 27px;
     width: 27px;
@@ -43,21 +47,19 @@ li{
     justify-content: center;
 }
 
-
-
 /**### MEDIA QUERIES ####**/
 /* surface duo */
 @media only screen and (min-width: 540px) and (max-height: 720px) {
-    .lessLogoTop{
+    .lessLogoTop {
         height: 35px;
         margin-left: 78px;
     }
-    
-    .navTop{
+
+    .navTop {
         margin-right: 62px;
     }
-        
-    .navigationIcon{
+
+    .navigationIcon {
         height: 30px;
         width: 30px;
         font-size: 28px;
@@ -66,68 +68,88 @@ li{
 
 /* ipad */
 @media only screen and (min-width: 738px) and (max-height: 1024px) {
-    .navigationIcon{
+    .navigationIcon {
         height: 40px;
         width: 40px;
         font-size: 35px;
     }
 
-    .lessLogoTop{
+    .lessLogoTop {
         height: 40px;
         margin-left: 135px;
         top: 50%;
         transform: translateY(-75%);
     }
-    
-    .navTop{
+
+    .navTop {
         margin-right: 115px;
     }
-        
 }
 
 /* ipad pro */
 @media only screen and (min-width: 1024px) and (max-height: 1366px) {
-    .navigationIcon{
-        height: 55px;
-        width: 55px;
-        font-size: 45px;
-    }
-
-    .lessLogoTop{
-        height: 65px;
-        margin-left: 185px;
-        top: 50%;
-        transform: translateY(-80%);
-    }
-    
-    .navTop{
-        margin-right: 160px;
-    }
 }
 
 /* screens 1024px and higher */
 @media only screen and (min-width: 1025px) {
     .headerTop {
-        height: 60px;
+        display: none;
     }
-    
-    .navigationIcon{
-        height: 30px;
-        width: 30px;
-        font-size: 45px;
+    .navigationIcon {
+        display: none;
     }
 
-    .lessLogoTop{
-        height: 40px;
-        margin-left: 185px;
-        position: relative;
-        top: 16px;
-        transform: translateY(0);
-        margin-left: 180px;
+    .lessLogoTop {
+        display: none;
     }
-    
-    .navTop{
-        width: 10%;
-        margin-right: 180px;
+
+    .navTop {
+        display: none;
+    }
+
+    .fixedTop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+        background-color: #00113a;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 50;
+    }
+
+    .topPosition {
+        width: 450px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .lessLogoTopBig {
+        height: 40px;
+        position: relative;
+        top: 15px;
+    }
+
+    .navTopBig {
+        margin: 0;
+    }
+
+    .ulTopBig {
+        display: flex;
+    }
+
+    .navigationIconBig {
+        color: #fff;
+        margin-left: 10px;
+        height: 30px;
+        width: 30px;
+        font-size: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
