--- a/src/components/Pages/NewPost.module.css
+++ b/src/components/Pages/NewPost.module.css
@@ -26,15 +26,15 @@
     font-size: 15px;
 }
 
-.hideInput{
+.hideInput {
     display: none;
 }
 
-.selectImageButton{
+.selectImageButton {
     margin-top: 10px;
     padding: 0.5em 1.25em;
     border-radius: 10px;
-    background:#ffab38;
+    background: #ffab38;
     color: white;
     font-weight: 600;
 }
@@ -82,7 +82,7 @@
     flex-direction: column;
 }
 
-.uploadButton{
+.uploadButton {
     position: absolute;
     background: #ffab38;
     border: none;
@@ -93,7 +93,7 @@
     right: 10px;
 }
 
-.newPostModal{
+.newPostModal {
     position: absolute;
     padding: 1.25em 1em;
     top: 50%;
@@ -119,7 +119,9 @@
     resize: none;
     border-radius: 10px;
     padding: 1em;
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
 .textareaStyle:focus {
@@ -143,15 +145,15 @@
     .newPostSection {
         padding: 57px 0;
     }
-    .shareText{
+    .shareText {
         margin-top: 25px;
     }
 
-    .newPostModal{
+    .newPostModal {
         width: 330px;
     }
 
-    .uploadToDBButton{
+    .uploadToDBButton {
         font-size: 18px;
         padding: 0.5em 2em;
     }
@@ -171,7 +173,7 @@
         height: 430px;
     }
 
-    .uploadButton{
+    .uploadButton {
         font-size: 15px;
         padding: 0.5em 1.25em;
         bottom: 15px;
@@ -219,7 +221,7 @@
         height: 500px;
     }
 
-    .uploadButton{
+    .uploadButton {
         font-size: 15px;
         padding: 0.5em 1.25em;
         bottom: 15px;
@@ -241,7 +243,7 @@
 /* surface duo */
 @media only screen and (min-width: 540px) and (max-height: 720px) {
     .newPostSection {
-        padding: 61px 0;;
+        padding: 61px 0;
     }
 
     .imagePreviewContainer {
@@ -254,7 +256,7 @@
         height: 420px;
     }
 
-    .uploadButton{
+    .uploadButton {
         font-size: 15px;
         padding: 0.5em 1.25em;
         bottom: 15px;
@@ -276,7 +278,7 @@
 /* ipad */
 @media only screen and (min-width: 738px) and (max-height: 1024px) {
     .newPostSection {
-        padding: 87px 0;;
+        padding: 87px 0;
     }
 
     .imagePreviewContainer {
@@ -285,12 +287,11 @@
         border-radius: 0 0 10px 10px;
     }
 
-
     .imagePreviewContainerStyle {
         height: 600px;
     }
 
-    .uploadButton{
+    .uploadButton {
         font-size: 20px;
         padding: 0.5em 1.25em;
         bottom: 25px;
@@ -313,29 +314,29 @@
         margin-top: 40px;
     }
 
-    .headline{
+    .headline {
         font-size: 35px;
     }
 
     .creativeMindText {
         font-size: 20px;
     }
-    
-    .selectImageButton{
+
+    .selectImageButton {
         margin-top: 15px;
         padding: 0.5em 1.5em;
         font-size: 20px;
     }
 
-    .newPostModal{
+    .newPostModal {
         padding: 2em 1em;
         width: 450px;
     }
-        
+
     .textareaStyle {
         font-size: 18px;
     }
-    
+
     .uploadToDBButton {
         margin-top: 25px;
         font-size: 22px;
@@ -347,7 +348,7 @@
 /* ipad pro */
 @media only screen and (min-width: 1024px) and (max-height: 1366px) {
     .newPostSection {
-        padding: 116px 0;;
+        padding: 116px 0;
     }
 
     .imagePreviewContainer {
@@ -356,12 +357,11 @@
         border-radius: 0 0 10px 10px;
     }
 
-
     .imagePreviewContainerStyle {
         height: 800px;
     }
 
-    .uploadButton{
+    .uploadButton {
         font-size: 28px;
         bottom: 30px;
         right: 30px;
@@ -383,28 +383,28 @@
         margin-top: 40px;
     }
 
-    .headline{
+    .headline {
         font-size: 50px;
     }
 
     .creativeMindText {
         font-size: 30px;
     }
-    
-    .selectImageButton{
+
+    .selectImageButton {
         margin-top: 20px;
         font-size: 30px;
     }
 
-    .newPostModal{
+    .newPostModal {
         padding: 2em 1em;
         width: 645px;
     }
-        
+
     .textareaStyle {
         font-size: 25px;
     }
-    
+
     .uploadToDBButton {
         margin-top: 25px;
         font-size: 30px;
@@ -416,8 +416,10 @@
 /* screens 1024px and higher */
 @media only screen and (min-width: 1025px) {
     .newPostSection {
-        margin: 60px;
+        margin: 60px 0 0 0;
         padding: 0;
+        overflow: hidden;
+        height: 700px;
     }
 
     .imagePreviewContainer {
@@ -425,12 +427,11 @@
         width: 450px;
     }
 
-
     .imagePreviewContainerStyle {
         height: 400px;
     }
 
-    .uploadButton{
+    .uploadButton {
         font-size: 15px;
         bottom: 15px;
         right: 15px;
@@ -452,15 +453,15 @@
         margin-top: 20px;
     }
 
-    .headline{
+    .headline {
         font-size: 35px;
     }
 
     .creativeMindText {
         font-size: 20px;
     }
-    
-    .selectImageButton{
+
+    .selectImageButton {
         margin-top: 15px;
         font-size: 20px;
     }
@@ -471,15 +472,15 @@
         object-fit: cover;
     }
 
-    .newPostModal{
+    .newPostModal {
         padding: 2em 1em;
         width: 450px;
     }
-        
+
     .textareaStyle {
         font-size: 14px;
     }
-    
+
     .uploadToDBButton {
         margin-top: 25px;
         font-size: 20px;
