--- a/src/components/PublicFeed/PublicFeed.module.css
+++ b/src/components/PublicFeed/PublicFeed.module.css
@@ -102,6 +102,7 @@
 @media only screen and (min-width: 1025px) {
     .feedContainer {
         width: 450px;
+        margin-bottom: 10px;
     }
 
     .commentContent {
